$Id: History,v 1.3 1999-04-15 08:41:40 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Apr 15, 99 M.Asai (tag event-01-00-02)
- Catch up the changes of trajectory classes in tracking category.

Apr 09, 99 M.Asai (tag event-01-00-01)
- Change the pointer arguments in user action classes to const.

Nov 11, 98 M.Asai (tag event-00-03-04)
- Optimize G4PrimaryVertex for events such as having huge number
  of primaries.

Oct 10, 98 M.Asai (tag event-00-03-03)
- Bug fix in G4PrimaryVertex.
- Add verbosity to G4PrimaryXXX.

Oct 01, 98 M.Asai (tag event-00-03-02)
- Introducing a new inlined method in G4ParticleGun.hh.

Sep. 21, 98 M.Asai (tag event-00-03-01)
- Inclusion of "G4HCofThisEvent.hh" and "G4DCofThisEvent.hh" moved
  from "G4Event.cc" to "G4Event.hh", to avoid the link problem on
  HP-CC (not aCC).

July 19, 98 M.Asai (tag event-00-01-03)
- More tight check against EoF in G4HEPEvtInterface

July 15, 98 M.Asai (tag event-00-01-02)

July 4, 98 M.Asai (tag event-00-01-01)
- ready for the beta release

June 30, 98 M.Asai (tag event-00-07-01)
- Introduce shortlived particles

June 22, 98 P. Urban
- Preliminary results of tracking optimisation merged into the HEAD.
- tagged as event-00-06-03
