@@ -1,4 +1,4 @@
-$Id: History,v 1.3 1999-04-15 08:41:40 asaim Exp $
+$Id: History,v 1.4 1999-06-07 16:53:58 stesting Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Jun 7, 99, J.Allison (tag event-01-00-03)
+- Trapped "G4HEPEvtInterface:: cannot open file."
 
 Apr 15, 99 M.Asai (tag event-01-00-02)
 - Catch up the changes of trajectory classes in tracking category.
